# SPEKTRA_laserController

./: .gitignore  Cargo.toml  lasertest.toe  readme.md  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: device.rs  dxlcomm.rs  main.rs  osc.rs
