[package]
name = "spektra_shutl_laser"
version = "0.1.0"
authors = ["Yuske Goto <yuskegoto@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "spektra_shutl_laser"
harness = false              # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
test = []

default = ["all", "hal", "esp-idf-svc/native", "production"]

production = ["T-Internet"]

# T-Internet device, for production
T-Internet = []


pio = ["esp-idf-svc/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]

std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std", "embedded-svc/std"]
alloc = ["embedded-svc/alloc", "esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly", "embedded-svc/nightly"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, optional = true }
esp-idf-sys = { version = "0.35", default-features = true }
esp-idf-hal = { version = "0.44", optional = true, default-features = true }
embedded-svc = { version = "0.28", optional = true, default-features = true }

smart-leds-trait = { version = "0.3", optional = true }

heapless = "0.8"
rosc = "0.10.1"
bbqueue = "0.5.1"

num = "0.4"
num-derive = "0.4.0"
num-traits = "0.2"
bincode = "1.3"

smart-leds = "0.4"
ws2812-esp32-rmt-driver = { version = "0.9", features = ["smart-leds-trait"] }
crc16 = "*"

[build-dependencies]
embuild = "0.32.0"
